# synth-cli

./: .gitignore  Cargo.toml  README.md
samples/: const_tone.yml  lfo_vibrato.yml  midi_poly.yml  pure_tone_440.yml
src/: main.rs
