[package]
name = "synth-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal front-end for the synth modular synthesizer platform."

[dependencies]
# Committed as a git dependency so a standalone clone of synth-cli builds with no setup.
# In the dev workspace this is redirected to the local submodule via [patch] (see dev repo Cargo.toml).
synth-core = { git = "ssh://git@github.com/hypafrag/synth-core.git", branch = "master" }
